# openchart-health

./: .gitignore  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
alembic/: env.py
docs/: audit_a11y_perf.md  csv_audit_output.txt  csv_findings.md  data_dictionary.md  decisions.md  direction_verification_checklist.md  draft_measure_group_enum.py  draft_measure_registry_complications_deaths.py  draft_measure_registry_hai.py  draft_measure_registry_hcahps.py  draft_measure_registry_imaging.py  draft_measure_registry_mspb.py  draft_measure_registry_readmissions.py  draft_measure_registry_timely_effective.py  hcahps_credible_intervals.md  launch_observability.md  launch_status.md  measure_group_misclassification.md  ownership_changes_2026-01_to_2026-04.md  ownership_entity_resolution.md  phase1_review_notes.md  phase_0_findings.md  project_status.md  refresh_schedule.md  research_meta_strategy.md  trend_period_enrichment.md  v1.1_backlog.md  visual_hooks_spec.md
frontend/: .env.example  .env.local  instrumentation.ts  next.config.mjs  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts
pipeline/: cms_definitions.py  config.py  orchestrate.py
scripts/: apply_research_decisions.py  apply_review_decisions.py  bootstrap_db.py  build_distributions.py  build_qa_data.py  build_reporting_rates.py  check_ownership_changes.py  classify_ownership_structures.py  cluster_ownership_entities.py  compute_hcahps_ci.py  csv_audit.py  detect_cms_refresh.py  export_parent_group_stats.py  (+9 more)
(+336 files in other folders)
