[project]
name = "openchart-health"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.0",
    "alembic",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
include = ["pipeline*", "api*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pipeline --cov=api --cov-report=term-missing"
